k8s-manifests/app1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
        env: dev
    spec:
      containers:
      - name: app1
        image: hashicorp/http-echo:0.2.3
        args: ["-text=Hello from app1"]
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: dev
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
