k8s-manifests/app2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
        env: dev
    spec:
      serviceAccountName: dev
      containers:
      - name: app2
        image: hashicorp/http-echo:0.2.3
        args: ["-text=Hello from app2"]
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 4000
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 4000
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: dev
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
